--- a/.github/workflows/test-aiv.yml
+++ b/.github/workflows/test-aiv.yml
@@ -1,4 +1,4 @@
-name: Отладка AIV
+name: Тестирование и загрузка AIV
 
 on:
   push:
@@ -8,26 +8,32 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write  # Необходимо для загрузки активов релиза
+
 jobs:
-  debug:
+  test-and-upload:
     runs-on: ubuntu-latest
+
     steps:
+      # Клонирование репозитория
       - name: Клонирование кода
         uses: actions/checkout@v4
-        with:
-          ref: ec255bf560684896b4aad3265bca0a4d7b763327
 
+      # Настройка Python
       - name: Установка Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
+      # Установка зависимостей
       - name: Установка зависимостей
         run: |
           python -m pip install --upgrade pip
           pip install numpy
-          pip install .
+          pip install .  # Установка sourcehold-maps
 
+      # Проверка наличия .aiv файлов
       - name: Проверка файлов в resources/aiv
         run: |
           ls -l resources/aiv/
@@ -36,12 +42,40 @@ jobs:
             exit 1
           fi
 
-      - name: Запуск тестов
+      # Запуск тестов
+      - name: Запуск юнит-тестов
         env:
           BASEPATH: ./resources/aiv
         run: |
-          python -m unittest test_aiv.py -v || true
+          python -m unittest tests/aiv/test_aiv_to_json.py -v || true
 
+      # Создание файлов для загрузки
+      - name: Создание файлов в dist
+        run: |
+          mkdir -p dist
+          # Пример: копируем .aiv файлы в dist как sourcehold*
+          for file in resources/aiv/*.aiv; do
+            cp "$file" "dist/sourcehold-$(basename "$file")"
+          done
+          ls -l dist/
+
+      # Проверка релиза latest
+      - name: Создание релиза, если не существует
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create latest --title "Latest Release" --notes "Автоматический релиз" --draft || true
+        if: github.event_name == 'push'
+
+      # Загрузка активов в релиз
+      - name: Загрузка активов
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload latest dist/sourcehold* --clobber
+        if: github.event_name == 'push'
+
+      # Загрузка результатов
       - name: Загрузка результатов
         if: always()
         uses: actions/upload-artifact@v4
@@ -49,4 +83,5 @@ jobs:
           name: test-output
           path: |
             output/
+            dist/
             *.log
